Se muestra la categoria y los avisos dentro de cada categoria. Se filtran solo los avisos activos. [WIP] Corregir presentación

--- a/app/src/main/res/layout/item_list_category.xml
+++ b/app/src/main/res/layout/item_list_category.xml
@@ -4,42 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="100dp">
 
-    <androidx.cardview.widget.CardView
+
+    <TextView
+        android:id="@+id/tv_categoria"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="8dp"
-        app:cardMaxElevation="8dp"
-        app:cardBackgroundColor="@android:color/holo_blue_bright"
+        android:layout_marginBottom="8dp"
+        android:background="@android:color/holo_blue_light"
+        android:elevation="8dp"
+        android:padding="16dp"
+        android:text="@string/categoria_aqui"
+        android:textAlignment="center"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="80dp">
-
-            <TextView
-                android:id="@+id/tv_categoria"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="8dp"
-                android:text="@string/categoria_aqui"
-                android:textAlignment="center"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
