--- a/app/src/main/res/layout/fragment_lista_ads.xml
+++ b/app/src/main/res/layout/fragment_lista_ads.xml
@@ -6,21 +6,21 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_categories"
+        android:id="@+id/rv_lista_ad"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_categories" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_categories_list_add" />
 
     <TextView
-        android:id="@+id/tv_categories"
+        android:id="@+id/tv_categories_list_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/categorias"
+        android:text="@string/category_title_here"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
