--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -185,7 +185,7 @@
         app:layout_constraintTop_toTopOf="@+id/tv_evaluacion" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/bt_evaluate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
