--- a/app/src/main/res/layout/fragment_evaluation.xml
+++ b/app/src/main/res/layout/fragment_evaluation.xml
@@ -32,6 +32,7 @@
         android:layout_marginTop="16dp"
         android:numStars="5"
         android:stepSize="1"
+        android:rating="5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.573"
         app:layout_constraintStart_toStartOf="parent"
